Bump VRChat API w/API checker